Resolves: tdf#117091 prepend a xml declaration if missing

Change-Id: Iee8305f581533dedcb94d75af15d7178792947ff
Reviewed-on: https://gerrit.libreoffice.org/65114
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>